--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="container">
             <p id="second" class="red-text">thoreom ;sksmfl applishoinf ajdnmajldie</p>
                 <p>
-                    <span calss="big">jgklfjlk sljgsfiljgls; d;lfkl;d'sjks jekrfeutir4ejk;</span>
+                    <span class="big">jgklfjlk sljgsfiljgls; d;lfkl;d'sjks jekrfeutir4ejk;</span>
                 </p>
         </div>
         <img src="https://s.isanook.com/wo/0/ud/46/231281/a.jpg?ip/crop/w670h402/q80/jpg" alt="cat">
